--- a/themes/antares/layout/_partial/header.ejs
+++ b/themes/antares/layout/_partial/header.ejs
@@ -1,11 +1,11 @@
-<section class="cover">
-  <header class="cover__header">
+<header class="cover">
+  <section class="cover__header">
     <%- image_tag('images/logo-short.png', {alt: "Antares Logo", class:'cover__logo'}) %>
     <h2 class="cover__title">Antares Blog</h2>
     <div class="expand"></div>
     <a class="cover__link" href="https://facebook.com/antaresprogramming" target="_blank"><%- image_tag('images/facebook.svg', {alt: "Go to Facebook"}) %></a>
-  </header>
-</section>
+  </section>
+</header>
 <nav class="nav" aria-label="Primary Navigation">
   <a class="nav-item" href="/antares-blog/" title="Home" aria-label="Go to home">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 34"><path d="M16 34V22h8v12h10V18h6L20 0 0 18h6v16z"/></svg>
