--- a/themes/antares/layout/index.ejs
+++ b/themes/antares/layout/index.ejs
@@ -24,6 +24,11 @@
         <% }); %>
         
     </section>
+
+    <section class="section section--categories">
+        <%- partial('_widget/categories.ejs') %>
+        <%- partial('_widget/tags.ejs') %>
+    </section>
 </main>
 
 <!--div class="posts-container">
