--- a/themes/antares/layout/page.ejs
+++ b/themes/antares/layout/page.ejs
@@ -1,4 +1,4 @@
-<div class="page">
+<main class="main page">
     <h1 class="post__title">
         <a href="<%- config.root %><%- page.path %>">
             <%- page.title || page.link %>
@@ -7,4 +7,4 @@
     <section class="post post--full">
         <%- page.content %>
     </section>
-</div>
+</main>
