--- a/themes/antares/layout/archive.ejs
+++ b/themes/antares/layout/archive.ejs
@@ -1,7 +1,7 @@
 <%- /*partial('_partial/header', {title: 'Post Archives'})*/ %>
-<div class="card-grid">
+<main class="main card-grid">
     <% page.posts.each(function(item){ %>
         <%- partial('_partial/archive', {item: item}) %>
     <% }); %>
-</div>
+</main>
 
