--- a/themes/antares/layout/_partial/footer.ejs
+++ b/themes/antares/layout/_partial/footer.ejs
@@ -75,6 +75,10 @@
   };
   firebase.initializeApp(config);
 </script>
+<script>
+    var CONFIG_ROOT = `<%- config.root %>`;
+    var CONFIG_URL = `<%- config.url %>`.replace('/antares-blog', '');
+</script>
 
 <article class="toast">
   <svg class="icon icon--success" viewBox="0 0 40 40"><path d="M20 0C8.95 0 0 8.95 0 20c0 11.04 8.95 20 20 20 11.04 0 20-8.96 20-20C40 8.95 31.04 0 20 0zm-4 30L6 20l2.83-2.83L16 24.34 31.17 9.17 34 12 16 30z"/></svg>
