--- a/themes/antares/layout/index.ejs
+++ b/themes/antares/layout/index.ejs
@@ -15,7 +15,7 @@
     
     <section class="section">
         <header class="section__heading">
-            <h2>Other Articles</h2>
+            <h2>Recent Articles</h2>
         </header>
         <% 
             page.posts.each(function(item){ 
