--- a/themes/antares/layout/_partial/footer.ejs
+++ b/themes/antares/layout/_partial/footer.ejs
@@ -53,8 +53,8 @@
 
   <section class="about">
     <h3>Ang Antares Programming</h3>
-    <p>Ang Antares Programming ay isang blog tungkol sa mga bagay tungkol sa Web at software development na hindi madalas maituro sa mga university at college. Dahil kinikilala ng Antares Programming ang epekto ng wikang kinalakhan o <i lang="en">mother tongue</i> sa pagkatuto, karamihan ng mga artikulo sa site na ito ay nasa Filipino. Umaasa ang writer nito na darating ang panahon na magkakaroon ng mas maraming materyal sa iba pang mga wika ng Filipinas. Pero sa ngayon, sapat na ang pagsisikap na ito.</p>
-    <p>Nga pala, hindi laging ganito "kalalim" ang Filipino sa site na ito. 😉</p>
+    <p>Ang Antares Programming ay isang blog para sa mga Pilipino tungkol sa mga bagay tungkol sa Web at software development na hindi madalas maituro sa mga university at college. Dahil kinikilala ng Antares Programming ang epekto ng wikang kinalakhan o <i lang="en">mother tongue</i> sa pagkatuto, karamihan ng mga artikulo sa site na ito ay nasa Filipino. Umaasa ang writer nito na darating ang panahon na magkakaroon ng mas maraming materyal sa iba pang mga wika ng Filipinas. Pero sa ngayon, sapat na ang pagsisikap na ito.</p>
+    <p>Nga pala, hindi laging ganito "kalalim" (kapormal) ang Filipino sa site na ito. 😉</p>
   </section>
 
   <p>&copy; <%- new Date().getFullYear() %> Francis Rubio</p>
