--- a/themes/antares/layout/_partial/head.ejs
+++ b/themes/antares/layout/_partial/head.ejs
@@ -12,6 +12,9 @@ function renderLinkPaths(pathArray = []) {
 %>
 <head>
   <meta charset="utf-8" />
+  <% if(page.is_autoreload) { %>
+  <script>location.replace('/')</script>
+  <% } %>
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title><%= page.title || config.title %></title>
@@ -80,13 +83,13 @@ function renderLinkPaths(pathArray = []) {
   <%- links.join("\n") %>
   <%- scripts.join("\n") %>
 
-  <link
+  <!-- <link
     href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900"
     rel="stylesheet"
   />
   
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700" rel="stylesheet"> 
-  <link href="https://fonts.googleapis.com/css?family=Lora:400,400i&amp;subset=latin-ext" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Lora:400,400i&amp;subset=latin-ext" rel="stylesheet">  -->
   <!--
     HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries
   -->
@@ -95,7 +98,7 @@ function renderLinkPaths(pathArray = []) {
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131462553-1"></script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131462553-1"></script> -->
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
