--- a/themes/antares/layout/_partial/sidebar.ejs
+++ b/themes/antares/layout/_partial/sidebar.ejs
@@ -9,7 +9,7 @@
     </details>
   </section>
 
-  <section class="sidebar-wrapper" aria-label="Table of Contents">
+  <section class="sidebar-wrapper feedback-sidebar" aria-label="Table of Contents">
     <details>
       <summary>
         <h4 class="sidebar__title" id="sidebar-title">Kumusta ang post na ito?</h4>
