--- a/themes/antares/layout/category.ejs
+++ b/themes/antares/layout/category.ejs
@@ -7,7 +7,7 @@
 
         <div class="card-grid">
             <% posts.forEach(item => { %>
-                <%- partial('_partial/article-excerpt', {item: item, is_featured: false}) %>
+                <%- partial('_partial/archive', {item: item, is_featured: false}) %>
             <% }) %>
         </div>
     </section>
