--- a/themes/antares/source/css/index.css
+++ b/themes/antares/source/css/index.css
@@ -8,6 +8,7 @@ html {
   --text: #555;
   --text--darker: #333;
   --text--dark: #000;
+  --text-on-dark: #fff;
   --nav-text: #eee;
   --header-bg: #eee;
   --header-bg-dark: #ddd;
@@ -26,10 +27,13 @@ html {
   --cover-bg--hover: hsl(0, 0%, 30%);
   --footer-bg: #333;
   --sans-serif: "Montserrat", sans-serif;
-  --serif: "Lora", serif;
+  --serif: "Eczar", serif;
   --link-color: #35f;
   --success: #3c5;
   --error: #c35;
+
+  --cover-img: url("../images/Website Cover v3.png");
+  --cover-height: 200px;
 }
 
 * {
@@ -57,6 +61,7 @@ body {
   outline: none;
   box-shadow: 0 0 0 5px #fd0;
   box-shadow: 0 0 0 5px var(--primary);
+  z-index: 3;
 }
 
 img {
@@ -79,6 +84,35 @@ details summary:focus {
   transition: background-size 300ms;
 }
 
+dl:not([class]) {
+  padding: 2rem 1rem;
+}
+
+dt:not([class]) {
+  margin-top: 0.5rem;
+  padding: 1rem;
+}
+
+dt:not([class]),
+dt:not([class])>* {
+  font-weight: 900;
+}
+
+dd:not([class]) {
+  padding: 1rem;
+  padding-left: 3rem;
+  margin: 0;
+}
+
+dt:not([class]),
+dd:not([class]) {
+  background-color: #eee;
+}
+
+dt:not([class]) code {
+  border: 1px solid #ccc;
+}
+
 strong {
   font-weight: 900;
   color: var(--text--darker);
@@ -98,6 +132,8 @@ h6 {
   font-weight: 900;
   font-family: var(--sans-serif), sans-serif;
   clear: both;
+  color: var(--text--dark);
+  margin: 1rem 0;
 }
 
 pre *,
@@ -125,7 +161,7 @@ a:-moz-focusring {
 
 .category:focus,
 a:not([class]):focus {
-  box-shadow: 0 0 0 3px var(--primary-dark);
+  box-shadow: 0 0 0 3px var(--accent);
 }
 
 :target {
@@ -158,14 +194,21 @@ br {
   display: none;
 }
 
-blockquote {
-  margin: 1rem auto;
-  max-width: 50ch;
-  border-left: 5px solid var(--header-bg-dark);
-  background-color: var(--header-bg-light);
-  padding: 1ch;
-  clear: both;
-  font-family: var(--sans-serif), sans-serif;
+.side-callout {
+	margin: 1rem auto;
+	max-width: 50ch;
+	border: 1px solid var(--header-bg-dark);
+	background-color: var(--header-bg-light);
+	padding: 1ch;
+	clear: both;
+	font-family: var(--sans-serif), sans-serif;
+	border-left: 5px solid var(--header-bg-dark);
+}
+
+.is-post {
+  --bg-img-texture: url("../images/backgrounds/1.jpg");
+  background-image: var(--bg-img-texture);
+  background-blend-mode: color-burn;
 }
 
 .main,
@@ -178,33 +221,37 @@ blockquote {
 }
 
 .cover {
-  min-height: 200px;
+  min-height: var(--cover-height);
   height: 25vh;
   background-color: var(--cover-bg);
-  background-image: url("../images/Website Cover v3.png");
+  background-image: var(--cover-img);
   background-size: cover;
   background-position: center right;
   display: flex;
-  align-items: center;
 }
 
 .cover__header {
   display: flex;
   align-items: center;
-  width: 100%;
+  flex: 1;
   padding: 0.5rem;
 }
 
 .cover__logo {
   width: 25%;
-  max-width: 200px;
-  padding-right: 1ch;
+  max-width: 100px;
+  background-color: #333;
 }
 
 .cover__title {
-  font-weight: normal;
-  color: rgb(200, 200, 200);
+  font-weight: 600;
+  color: #fff;
   padding: 0 0.5ch;
+  mix-blend-mode: exclusion;
+  font-size: 1em;
+  text-transform: uppercase;
+  letter-spacing: 1em;
+  margin-left: 1em;
 }
 
 .expand {
@@ -302,9 +349,8 @@ blockquote {
 
 .post--hoverable:focus-within,
 .post--hoverable:hover {
-  box-shadow: 1px 1px 20px #0003;
+  box-shadow: var(--elevation-2), 0 0 0 1px #0003;
 }
-
 .post--featured {
   background-color: var(--card-bg);
   border: 1px solid var(--card-bg-dark);
@@ -324,6 +370,23 @@ blockquote {
 
 .post-main .post__title {
   margin: 1rem;
+  font-size: 3rem;
+  text-align: right;
+  width: auto;
+  font-weight: 300;
+}
+
+.post-main > * {
+  width: auto !important;
+}
+
+.post--full > p {
+  padding-left: 2rem;
+}
+
+.post-main .post__title a {
+  color: var(--text);
+  text-shadow: none;
 }
 
 .post__title a {
@@ -410,7 +473,7 @@ blockquote {
 }
 
 .tag-list-link::before {
-  content: '#';
+  content: "#";
 }
 
 .flex > .tag {
@@ -422,7 +485,12 @@ blockquote {
 }
 
 .tag:focus {
-  box-shadow: 0 0 0 5px var(--primary);
+  animation: focus_blink 1s infinite alternate;
+}
+
+@keyframes focus_blink {
+  from { box-shadow: 0 0 0 5px var(--primary); }
+  to   { box-shadow: 0 0 0 10px var(--primary); }
 }
 
 .blog-tags-container .tag {
@@ -588,6 +656,7 @@ a[target="_blank"]::after {
 
 .post--full {
   max-width: 70ch;
+  width: 100%;
   margin: 0.5rem auto;
   margin-top: 1rem;
   font-family: var(--serif), serif;
@@ -600,7 +669,7 @@ a[target="_blank"]::after {
 
 .highlight {
   max-width: 70ch;
-  margin: auto;
+  margin: 0.5rem auto;
   background-color: #444;
   color: var(--nav-text);
   overflow: auto;
@@ -674,9 +743,12 @@ hr {
 .card-grid .post {
   max-width: 60ch;
   margin: 0.5rem auto;
+}
+
+.card-grid .post:hover,
+.card-grid .post:focus-within {
   background-color: var(--card-bg);
-  border: 1px solid var(--card-bg-dark);
-  box-shadow: var(--elevation);
+  box-shadow: var(--elevation-2), 0 0 0 1px #0003;
 }
 
 .card-grid .author {
@@ -761,7 +833,7 @@ hr {
   max-width: 35ch;
   width: 90%;
   background-color: var(--header-bg-light);
-  padding: 1ch;
+  /* padding: 1ch; */
   border: 1px solid var(--accent);
   border-top: 15px solid var(--accent);
   margin: 1ch auto;
@@ -770,16 +842,17 @@ hr {
 
 .side-note dl {
   margin: 0;
+  padding: 0;
 }
 
 .side-note dt {
   font-weight: bold;
   font-size: 1.5rem;
+  margin: 0;
 }
 
 .side-note dd ~ dd {
   margin-top: 1rem;
-
 }
 noscript {
   display: grid;
@@ -845,7 +918,7 @@ body:not(.noscript) #search:target {
   top: -100vh;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: var(--footer-bg);
   z-index: 999;
   grid-template-rows: min-content 1fr;
@@ -925,7 +998,7 @@ body:not(.noscript) #search:target {
 
 .content-snippet {
   opacity: 0.5;
-  color: var(--text)
+  color: var(--text);
 }
 
 .search-box {
@@ -982,16 +1055,20 @@ body:not(.noscript) #search:target {
 }
 
 .post--featured .post__header a {
-  color: var(--primary);
+  color: var(--text--dark);
   display: block;
 }
 
+.post--featured .post__header a:focus {
+  outline: none;
+  box-shadow: none;
+}
 .post__cover {
   grid-column: 1/3;
   grid-row: 1/4;
   width: 100%;
   height: 100%;
-  box-shadow: 1ch 1ch 0 var(--primary);
+  box-shadow: var(--elevation-2), 1ch 1ch 0 var(--primary);
   margin: 0;
   overflow: hidden;
 }
@@ -1015,18 +1092,25 @@ body:not(.noscript) #search:target {
   grid-column: 2 / span 3;
   grid-row: 2/3;
   z-index: 2;
-  color: var(--primary);
-  background-color: var(--text--dark);
-  padding: 0.5ch;
+  color: var(--text--dark);
+  background-color: var(--accent);
+  border: 1px solid var(--primary);
+  box-shadow: var(--elevation-2);
+  border-radius: 5px;
+  padding: 1ch;
   justify-self: end;
   transition: transform 300ms, box-shadow 300ms;
 }
 
 .post__header:focus-within,
 .post__header:hover {
-  box-shadow: 3px 3px 0 var(--primary), 6px 6px 0 var(--text--dark);
+  box-shadow: 0 0 0 10px var(--primary), 10px 10px 20px #0003;
   transform: translateX(-6px) translateY(-6px);
   transition: transform 300ms, box-shadow 300ms;
+}
+
+.post__header:hover {
+  box-shadow: 10px 10px 20px #0003;
 }
 
 .post__header h2 {
@@ -1058,20 +1142,30 @@ body:not(.noscript) #search:target {
   font-family: var(--sans-serif), sans-serif;
   font-weight: normal;
   text-indent: 0;
-  font-size: 1.25rem;
-  border-top: 3px double;
-  border-bottom: 0.5rem solid;
+  font-size: 1.75rem;
+  font-weight: 300;
   margin-bottom: 2rem;
+}
+
+.post--full > ul,
+.post--full > ol {
+  margin-left: 3em;
+}
+
+.post--full > p:nth-of-type(2) {
+  text-indent: 0;
 }
 
 .post--full > p:nth-of-type(2)::first-letter {
   font-family: var(--sans-serif), sans-serif;
-  font-size: 3rem;
+  font-size: 5rem;
+  float: left;
   font-weight: 900;
   line-height: 1rem;
-  color: var(--primary-dark);
+  margin-right: 3px;
+  /* color: var(--primary-dark);
   text-shadow: 2px 2px 0 var(--primary-light), 4px 4px 0 var(--primary),
-    6px 6px 0 var(--primary-dark);
+    6px 6px 0 var(--primary-dark); */
 }
 
 .page .post--full > p:nth-of-type(2)::first-letter {
@@ -1204,7 +1298,7 @@ li {
 }
 
 .icon--error {
-  fill: var(--error)
+  fill: var(--error);
 }
 
 .error .icon--error,
@@ -1244,7 +1338,7 @@ li {
 }
 
 .category-list-item::before {
-  content: '';
+  content: "";
   grid-column: 1/2;
   grid-row: 1/2;
   background-color: var(--primary);
@@ -1293,7 +1387,7 @@ li {
 }
 
 .sidebar {
-  min-width: 300px;  
+  min-width: 300px;
 }
 
 .footer .about {
@@ -1305,6 +1399,70 @@ li {
   opacity: 0.75;
 }
 
+.badge {
+  font-weight: 900;
+  text-transform: uppercase;
+  color: var(--text-on-dark);
+  background-color: var(--text--dark);
+  font-family: var(--sans-serif), sans-serif;
+  display: inline-block;
+  padding: 0.5ch 1ch;
+  font-size: 0.5em;
+}
+
+.post-main .post__title {
+  display: grid;
+}
+
+.badge--featured {
+  display: block;
+  justify-self: end;
+  padding: 0.5ch;
+  font-size: 1rem;
+}
+
+.example-container {
+  padding: 1rem;
+  margin: 1rem;
+  border: 1px solid #0003;
+  background-color: #fff;
+  box-shadow: inset 1px 1px 3px #0002;
+  position: relative;
+  min-height: 10rem;
+}
+
+.example-container--fixable {
+  margin-top: 2rem;
+}
+
+.example-container--fixable::before {
+  content: "I-double-click para palakihin";
+  position: absolute;
+  top: calc((1rem + 5px) * -1);
+  background-color: #eee;
+  padding: 4px;
+  border: 1px solid #ccc;
+  opacity: 0.25;
+}
+
+.example-container--fixable.fixed {
+  position: fixed;
+  top: 1rem;
+  left: 1rem;
+  bottom: 1rem;
+  right: 1rem;
+  z-index: 9999;
+  box-shadow: inset 1px 1px 3px #0002, 10px 10px 25px #0006;
+}
+
+.example-container--fixable:hover::before {
+  opacity: 1;
+}
+
+.example-container--fixable.fixed::before {
+  content: "I-double-click para paliitin";
+}
+
 @media only screen and (min-width: 768px) {
   .side-note {
     margin: 1ch;
@@ -1313,7 +1471,7 @@ li {
 
   .card--suggestion {
     float: left;
-    margin: 2rem;
+    margin: 1rem;
     margin-top: 2rem;
   }
 
@@ -1356,8 +1514,7 @@ li {
   }
 
   .cover__header {
-    width: 90%;
-    margin: auto;
+    background-color: #0001;
   }
 
   .nav-item--desktop {
@@ -1498,7 +1655,7 @@ li {
   .post__title--with-bg a:focus .background-decoration,
   .post__title--with-bg a:hover .background-decoration {
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%) !important;
-    background-color: var(--primary-dark);
+    background-color: var(--accent);
     transition: clip-path 200ms, background-color 300ms;
   }
 
